--- a/GraphqlController/GraphQlController.Lab/GraphQlController.Lab.csproj
+++ b/GraphqlController/GraphQlController.Lab/GraphQlController.Lab.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="GraphQL" Version="3.0.0-preview-1352" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
   </ItemGroup>
 
