--- a/GraphqlController/GraphqlController/GraphqlController.csproj
+++ b/GraphqlController/GraphqlController/GraphqlController.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="GraphQL" Version="3.0.0-preview-1352" />
+    <PackageReference Include="LoxSmoke.DocXml" Version="3.3.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
   </ItemGroup>
 
