--- a/GraphqlController/GraphqlController.WebAppTest/GraphqlController.WebAppTest.csproj
+++ b/GraphqlController/GraphqlController.WebAppTest/GraphqlController.WebAppTest.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GraphqlController.AspNet\GraphqlController.AspNet.csproj" />
     <ProjectReference Include="..\GraphqlController\GraphqlController.csproj" />
   </ItemGroup>
 
