--- a/GraphqlController/GraphqlController/GraphqlController.csproj
+++ b/GraphqlController/GraphqlController/GraphqlController.csproj
@@ -2,9 +2,18 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Authors>Alejandro Guardiola</Authors>
+    <Company>Develop Genesis</Company>
+    <Description>A graphql library that integrates nice with .net</Description>
+    <PackageProjectUrl>https://github.com/aleGuardiola/Graphql-Controller</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
