--- a/GraphqlController/GraphqlController.AspNet/GraphqlController.AspNetCore.csproj
+++ b/GraphqlController/GraphqlController.AspNet/GraphqlController.AspNetCore.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Description>Tools for use GraphqlController on Asp.net core</Description>
+    <RepositoryUrl>https://github.com/aleGuardiola/Graphql-Controller</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/aleGuardiola/Graphql-Controller</PackageProjectUrl>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +16,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GraphqlController\GraphqlController.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
