--- a/GraphqlController/GraphqlController/GraphqlController.csproj
+++ b/GraphqlController/GraphqlController/GraphqlController.csproj
@@ -7,6 +7,7 @@
     <Description>A graphql library that integrates nice with .net</Description>
     <PackageProjectUrl>https://github.com/aleGuardiola/Graphql-Controller</PackageProjectUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
