--- a/GraphqlController/GraphqlController.WebAppTest/GraphqlController.WebAppTest.csproj
+++ b/GraphqlController/GraphqlController.WebAppTest/GraphqlController.WebAppTest.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GraphqlController.AspNetCore.Cache\GraphqlController.AspNetCore.Cache.csproj" />
+    <ProjectReference Include="..\GraphqlController.AspNetCore.PersistedQuery\GraphqlController.AspNetCore.PersistedQuery.csproj" />
     <ProjectReference Include="..\GraphqlController.AspNet\GraphqlController.AspNetCore.csproj" />
     <ProjectReference Include="..\GraphqlController\GraphqlController.csproj" />
   </ItemGroup>
