Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,10 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+
+# go to the solution directory
+- powershell: cd GraphqlController
+
+# build projects
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
