--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,5 @@ variables:
 steps:
 
 # build projects
-- script: dotnet build --configuration $(buildConfiguration)
+- script: dotnet build $(solutionDirectory) --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
