--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,8 @@ steps:
 
 # build projects
 - script: dotnet build $(solutionDirectory) --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(solutionDirectory) --configuration $(buildConfiguration)'
+  displayName: 'Build Projects'
 
 # run tests
 - script: dotnet test $(solutionDirectory)
+  displayName: 'Run Tests'
