--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,6 +25,10 @@ steps:
 - script: dotnet test $(solutionDirectory)
   displayName: 'Run Tests'
 
-# create nuget packages
-- script: dotnet pack $(GraphControllerProjectDirectory) --no-build
-- script: dotnet pack $(GraphControllerAspNetCoreProjectDirectory) --no-build
+# install git version
+- script: dotnet tool install --global GitVersion.Tool --version 5.3.2
+  displayName: 'Install GitVersion'
+
+# # create nuget packages
+# - script: dotnet pack $(GraphControllerProjectDirectory) --no-build
+# - script: dotnet pack $(GraphControllerAspNetCoreProjectDirectory) --no-build
