--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,11 @@ steps:
 - script: dotnet tool install --global GitVersion.Tool --version 5.3.2
   displayName: 'Install GitVersion'
 
+# run GitVersion
+- script:  dotnet-gitversion /output buildserver
+
+
+
 # # create nuget packages
 # - script: dotnet pack $(GraphControllerProjectDirectory) --no-build
 # - script: dotnet pack $(GraphControllerAspNetCoreProjectDirectory) --no-build
