--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,11 +26,11 @@ steps:
   displayName: 'Run Tests'
 
 # install git version
-- script: dotnet tool install --global GitVersion.Tool --version 5.3.2
+- script: dotnet tool install --tool-path . GitVersion.Tool --version 5.3.2
   displayName: 'Install GitVersion'
 
 # run GitVersion
-- script:  dotnet-gitversion /output buildserver
+- script:  ./dotnet-gitversion /output buildserver
 
 
 
