--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,6 +9,7 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
+  
 variables:
   buildConfiguration: 'Release'
   solutionDirectory: 'GraphqlController'
@@ -17,14 +18,6 @@ variables:
 
 steps:
 
-# build projects
-- script: dotnet build $(solutionDirectory) --configuration $(buildConfiguration)
-  displayName: 'Build Projects'
-
-# run tests
-- script: dotnet test $(solutionDirectory)
-  displayName: 'Run Tests'
-
 # install git version
 - script: dotnet tool install --tool-path . GitVersion.Tool --version 5.3.2
   displayName: 'Install GitVersion'
@@ -32,6 +25,15 @@ steps:
 # run GitVersion
 - script:  ./dotnet-gitversion /output buildserver
   displayName: 'Run GitVersion'
+
+
+# build projects
+- script: dotnet build $(solutionDirectory) --configuration $(buildConfiguration) -p:Version=$(GitVersion.NugetVersion)
+  displayName: 'Build Projects'
+
+# run tests
+- script: dotnet test $(solutionDirectory)
+  displayName: 'Run Tests'
 
 # create nuget packages
 - script: dotnet pack $(GraphControllerProjectDirectory) -c $(buildConfiguration) --no-build
