--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,9 +43,9 @@ steps:
   displayName: 'Create Nuget for GraphqlController.AspNetCore'
 
 # publish nuget packages
-- script: dotnet nuget push GraphqlController.$(GitVersion.NugetVersion).nupkg -k $(nugetorgKey) -s https://api.nuget.org/v3/index.json
+- script: dotnet nuget push ./GraphqlController.$(GitVersion.NugetVersion).nupkg -k $(nugetorgKey) -s https://api.nuget.org/v3/index.json
   displayName: 'Publish GraphqlController'
 
-- script: dotnet nuget push GraphqlController.AspNetCore.$(GitVersion.NugetVersion).nupkg -k $(nugetorgKey) -s https://api.nuget.org/v3/index.json
+- script: dotnet nuget push ./GraphqlController.AspNetCore.$(GitVersion.NugetVersion).nupkg -k $(nugetorgKey) -s https://api.nuget.org/v3/index.json
   displayName: 'Publish GraphqlController.AspNetCore'
 
