pr triggers fixed

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,18 +3,21 @@
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
+pr:
+  autoCancel: true
+  branches:
+    include:
+      - master
+      - develop
+      - releases/*
+
 trigger:
   branches:
     include:  
       - master
       - develop
       - releases/*
-  pr:
-    autoCancel: true
-    branches:
-      - master
-      - develop
-      - releases/*
+  
     
 
 pool:
