publishing code coverage

--- a/build-pipeline.yml
+++ b/build-pipeline.yml
@@ -21,4 +21,8 @@ steps:
 
 # collect code coverage
 - script: dotnet test $(solutionDirectory)/GraphqlController.UnitTest/GraphqlController.UnitTest.csproj --configuration $(buildConfiguration) --logger trx --collect "Code coverage"
+- task: PublishTestResults@2
+  inputs:
+    testRunner: VSTest
+    testResultsFiles: '**/*.trx'
   displayName: 'Collect code coverage'
