--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,12 +63,12 @@ jobs:
         displayName: 'Create Nuget for GraphqlController.AspNetCore'
 
       # publish nuget packages
-      - script: dotnet nuget push ./GraphqlController.$(GitVersion.NugetVersion).nupkg -k %NUGET_KEY% -Source https://api.nuget.org/v3/index.json
+      - script: dotnet nuget push ./GraphqlController.$(GitVersion.NugetVersion).nupkg -k %NUGET_KEY% -s https://api.nuget.org/v3/index.json
         displayName: 'Publish GraphqlController'
         env: 
           NUGET_KEY: $(nugetorgKey)
 
-      - script: dotnet nuget push ./GraphqlController.AspNetCore.$(GitVersion.NugetVersion).nupkg -k %NUGET_KEY%  -Source https://api.nuget.org/v3/index.json
+      - script: dotnet nuget push ./GraphqlController.AspNetCore.$(GitVersion.NugetVersion).nupkg -k %NUGET_KEY%  -s https://api.nuget.org/v3/index.json
         displayName: 'Publish GraphqlController.AspNetCore'
         env: 
           NUGET_KEY: $(nugetorgKey)
