--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,10 +56,10 @@ jobs:
         displayName: 'Collect code coverage'
 
       # create nuget packages
-      - script: dotnet pack $(GraphControllerProjectDirectory) -c $(buildConfiguration) -p:Version=$(GitVersion.NugetVersion) -o . --no-build
+      - script: dotnet pack $(GraphControllerProjectDirectory) -c $(buildConfiguration) -p:Version=2.5 -o . --no-build
         displayName: 'Create Nuget for GraphqlController'
 
-      - script: dotnet pack $(GraphControllerAspNetCoreProjectDirectory) -c $(buildConfiguration) -p:Version=$(GitVersion.NugetVersion) -o . --no-build
+      - script: dotnet pack $(GraphControllerAspNetCoreProjectDirectory) -c $(buildConfiguration) -p:Version=2.5 -o . --no-build
         displayName: 'Create Nuget for GraphqlController.AspNetCore'
 
       - task: Bash@3
