--- a/GraphqlController/GraphqlController.AspNet/GraphqlController.AspNetCore.csproj
+++ b/GraphqlController/GraphqlController.AspNet/GraphqlController.AspNetCore.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="GraphQL" Version="3.0.0-preview-1352" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.2" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
+    <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
